<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MotoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Moto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="22dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Ligne1"
        android:layout_marginTop="70dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/Distance"
            />

        <EditText
            android:id="@+id/Nb_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Ligne2"
        android:layout_below="@+id/Ligne1">

        <TextView
            android:id="@+id/Nb_passager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/NbPassager"
            />

        <EditText
            android:id="@+id/NbpassagerEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Ligne3"
        android:layout_below="@+id/Ligne2"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TypeMoto"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton android:id="@+id/Moto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Moto" />
            <RadioButton android:id="@+id/Scooter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Scooter" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/Calculer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calculer"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Ligne3"
        android:layout_marginTop="30dp"
        android:onClick="Calculate"
        />

    <Button
        android:id="@+id/Enregistrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Result"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="Register"
        android:text="@string/Enregistrer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Result"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/Calculer"
        />

</RelativeLayout>